# ZealSearch

./: .gitignore  CMakeLists.txt
kde4/: CMakeLists.txt
kf5/: CMakeLists.txt  ktexteditor_zealsearch.desktop  ktexteditor_zealsearch.json  plugin.qrc  zealsearch_config.cpp  zealsearch_config.h  zealsearchplugin.cpp  zealsearchplugin.h  zealsearchui.rc  zealsearchview.cpp  zealsearchview.h
kf5/old/: ktexteditor_zealsearch.desktop
